@@ -38,22 +38,22 @@ if ( IS_ADMIN && !empty($_GET['cmd']) ):
 ?>
 
 <tr><td><label for="data_0__contestname_">Contest name:</label></td>
-<td><?=addInput('data[0][contestname]', @$row['contestname'], 40, 255)?></td></tr>
+<td><?php echo addInput('data[0][contestname]', @$row['contestname'], 40, 255)?></td></tr>
 <tr><td><label for="data_0__activatetime_">Activate time:</label></td>
-<td><?=addInput('data[0][activatetime]', @$row['activatetime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
+<td><?php echo addInput('data[0][activatetime]', @$row['activatetime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
 
 <tr><td><label for="data_0__starttime_">Start time:</label></td>
-<td><?=addInput('data[0][starttime]', @$row['starttime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
+<td><?php echo addInput('data[0][starttime]', @$row['starttime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
 
 <tr><td><label for="data_0__freezetime_">Scoreboard freeze time:</label></td>
-<td><?=addInput('data[0][freezetime]', @$row['freezetime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
+<td><?php echo addInput('data[0][freezetime]', @$row['freezetime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
 
 <tr><td><label for="data_0__endtime_">End time:</label></td>
-<td><?=addInput('data[0][endtime]', @$row['endtime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
+<td><?php echo addInput('data[0][endtime]', @$row['endtime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
 
 
 <tr><td><label for="data_0__unfreezetime_">Scoreboard unfreeze time:</label></td>
-<td><?=addInput('data[0][unfreezetime]', @$row['unfreezetime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
+<td><?php echo addInput('data[0][unfreezetime]', @$row['unfreezetime'], 20, 19)?> (yyyy-mm-dd hh:mm:ss)</td></tr>
 
 </table>
 
