@@ -61,21 +61,21 @@ if ( IS_ADMIN && !empty($cmd) ):
 
 ?>
 <tr><td><label for="data_0__name_">Language name:</label></td>
-<td><?=addInput('data[0][name]', @$row['name'], 20, 255)?></td></tr>
+<td><?php echo addInput('data[0][name]', @$row['name'], 20, 255)?></td></tr>
 
 <tr><td><label for="data_0__extension_">Extension:</label></td>
-<td class="filename">.<?=addInput('data[0][extension]', @$row['extension'], 5, 5)?></td></tr>
+<td class="filename">.<?php echo addInput('data[0][extension]', @$row['extension'], 5, 5)?></td></tr>
 
 <tr><td>Allow submit:</td>
-<td><?=addRadioButton('data[0][allow_submit]', (!isset($row['allow_submit']) || $row['allow_submit']), 1)?> <label for="data_0__allow_submit_1">yes</label>
-<?=addRadioButton('data[0][allow_submit]', (isset($row['allow_submit']) && !$row['allow_submit']), 0)?> <label for="data_0__allow_submit_0">no</label></td></tr>
+<td><?php echo addRadioButton('data[0][allow_submit]', (!isset($row['allow_submit']) || $row['allow_submit']), 1)?> <label for="data_0__allow_submit_1">yes</label>
+<?php echo addRadioButton('data[0][allow_submit]', (isset($row['allow_submit']) && !$row['allow_submit']), 0)?> <label for="data_0__allow_submit_0">no</label></td></tr>
 
 <tr><td>Allow judge:</td>
-<td><?=addRadioButton('data[0][allow_judge]', (!isset($row['allow_judge']) || $row['allow_judge']), 1)?> <label for="data_0__allow_judge_1">yes</label>
-<?=addRadioButton('data[0][allow_judge]', (isset($row['allow_judge']) && !$row['allow_judge']), 0)?> <label for="data_0__allow_judge_0">no</label></td></tr>
+<td><?php echo addRadioButton('data[0][allow_judge]', (!isset($row['allow_judge']) || $row['allow_judge']), 1)?> <label for="data_0__allow_judge_1">yes</label>
+<?php echo addRadioButton('data[0][allow_judge]', (isset($row['allow_judge']) && !$row['allow_judge']), 0)?> <label for="data_0__allow_judge_0">no</label></td></tr>
 
 <tr><td><label for="data_0__time_factor_">Time factor:</label></td>
-<td><?=addInput('data[0][time_factor]', @$row['time_factor'], 5, 5)?> x</td></tr>
+<td><?php echo addInput('data[0][time_factor]', @$row['time_factor'], 5, 5)?> x</td></tr>
 </table>
 
 <?php
@@ -106,20 +106,20 @@ echo addForm($pagename) . "<p>\n" .
 
 ?>
 <table>
-<tr><td scope="row">ID:          </td><td><?=htmlspecialchars($data['langid'])?></td></tr>
-<tr><td scope="row">Name:        </td><td><?=htmlspecialchars($data['name'])?></td></tr>
-<tr><td scope="row">Extension:   </td><td class="filename">.<?=htmlspecialchars($data['extension'])?></td></tr>
-<tr><td scope="row">Allow submit:</td><td><?=printyn($data['allow_submit']) . ' '.
+<tr><td scope="row">ID:          </td><td><?php echo htmlspecialchars($data['langid'])?></td></tr>
+<tr><td scope="row">Name:        </td><td><?php echo htmlspecialchars($data['name'])?></td></tr>
+<tr><td scope="row">Extension:   </td><td class="filename">.<?php echo htmlspecialchars($data['extension'])?></td></tr>
+<tr><td scope="row">Allow submit:</td><td><?php echo printyn($data['allow_submit']) . ' '.
 	addSubmit('toggle', 'cmd[toggle_submit]',
 		"return confirm('" . ($data['allow_submit'] ? 'Disallow' : 'Allow') .
 		" submissions for this language?')"); ?>
 </td></tr>
-<tr><td scope="row">Allow judge: </td><td><?=printyn($data['allow_judge']) . ' ' .
+<tr><td scope="row">Allow judge: </td><td><?php echo printyn($data['allow_judge']) . ' ' .
 	addSubmit('toggle', 'cmd[toggle_judge]',
 		"return confirm('" . ($data['allow_judge'] ? 'Disallow' : 'Allow') .
 		" judging for this language?')"); ?>
 </td></tr>
-<tr><td scope="row">Time factor:  </td><td><?=htmlspecialchars($data['time_factor'])?> x</td></tr>
+<tr><td scope="row">Time factor:  </td><td><?php echo htmlspecialchars($data['time_factor'])?> x</td></tr>
 </table>
 
 <?php
