@@ -95,24 +95,24 @@ $jdata = $DB->q('KEYTABLE SELECT judgingid AS ARRAYKEY, result, valid, starttime
 <table>
 <caption>Submission</caption>
 <tr><td scope="row">Contest:</td><td>
-	<a href="contest.php?id=<?=urlencode($submdata['cid'])?>">
-	<?=htmlspecialchars($submdata['contestname'])?></a></td></tr>
+	<a href="contest.php?id=<?php echo urlencode($submdata['cid'])?>">
+	<?php echo htmlspecialchars($submdata['contestname'])?></a></td></tr>
 <tr><td scope="row">Team:</td><td>
-	<a href="team.php?id=<?=urlencode($submdata['teamid'])?>">
-	<span class="teamid"><?=htmlspecialchars($submdata['teamid'])?></span>:
-	<?=htmlspecialchars($submdata['teamname'])?></a></td></tr>
+	<a href="team.php?id=<?php echo urlencode($submdata['teamid'])?>">
+	<span class="teamid"><?php echo htmlspecialchars($submdata['teamid'])?></span>:
+	<?php echo htmlspecialchars($submdata['teamname'])?></a></td></tr>
 <tr><td scope="row">Problem:</td><td>
-	<a href="problem.php?id=<?=$submdata['probid']?>">
-	<span class="probid"><?=htmlspecialchars($submdata['probid'])?></span>:
-	<?=htmlspecialchars($submdata['probname'])?></a></td></tr>
+	<a href="problem.php?id=<?php echo $submdata['probid']?>">
+	<span class="probid"><?php echo htmlspecialchars($submdata['probid'])?></span>:
+	<?php echo htmlspecialchars($submdata['probname'])?></a></td></tr>
 <tr><td scope="row">Language:</td><td>
-	<a href="language.php?id=<?=$submdata['langid']?>">
-	<?=htmlspecialchars($submdata['langname'])?></a></td></tr>
-<tr><td scope="row">Submitted:</td><td><?= htmlspecialchars($submdata['submittime']) ?></td></tr>
+	<a href="language.php?id=<?php echo $submdata['langid']?>">
+	<?php echo htmlspecialchars($submdata['langname'])?></a></td></tr>
+<tr><td scope="row">Submitted:</td><td><?php echo  htmlspecialchars($submdata['submittime']) ?></td></tr>
 <tr><td scope="row">Source:</td><td>
-	<a href="show_source.php?id=<?=$id?>">view source code</a></td></tr>
+	<a href="show_source.php?id=<?php echo $id?>">view source code</a></td></tr>
 <tr><td scope="row">Max runtime:</td><td>
-	<?= htmlspecialchars($submdata['maxruntime']) ?> sec</td></tr>
+	<?php echo  htmlspecialchars($submdata['maxruntime']) ?> sec</td></tr>
 </table>
 
 
