@@ -44,16 +44,16 @@ if ( IS_ADMIN && ($cmd == 'add' || $cmd == 'edit') ) {
 ?>
 
 <tr><td><label for="data_0__name_">Name:</label></td>
-<td><?=addInput('data[0][name]', @$row['name'], 40, 255)?></td></tr>
+<td><?php echo addInput('data[0][name]', @$row['name'], 40, 255)?></td></tr>
 
 <tr><td><label for="data_0__country_">Country:</label></td>
-<td><?=addInput('data[0][country]', @$row['country'], 3, 2)?>
+<td><?php echo addInput('data[0][country]', @$row['country'], 3, 2)?>
 <a target="_blank"
 href="http://www.iso.org/iso/country_codes/iso_3166_code_lists/english_country_names_and_code_elements.htm"><img
 src="../images/b_help.png" class="smallpicto" alt="?" /></a></td></tr>
 
 <tr><td valign="top"><label for="data_0__comments_">Comments:</label></td>
-<td><?=addTextArea('data[0][comments]', @$row['comments'])?></td></tr>
+<td><?php echo addTextArea('data[0][comments]', @$row['comments'])?></td></tr>
 
 </table>
 
