@@ -52,6 +52,7 @@ Version 3.0.0 - SVN
  - Reorder source tree: removed bin dir, move test-sources to tests, cleanup.
  - Fix DEBUG_JUDGE option for debugging judging backend.
  - FreeBSD porting fixes, making DOMjudge more POSIX compliant.
+ - Make DOMjudge work when PHP's short_open_tag = Off.
 
 Version 2.2.0 - 11 August 2008
 ------------------------------
